--- a/css/effects/set2.css
+++ b/css/effects/set2.css
@@ -24,7 +24,7 @@
 
 	width:100%;
 
-	height: 100%; min-height:100%;
+	height: auto; min-height:100%;
 
 	background: #3085a3;
 
@@ -42,7 +42,7 @@
 
 	display: block;
 
-	min-height: 100%;
+	min-height: auto;
 
 	max-width: 100%;
 
